# bitreader-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build-linux.yml  build-windows.yml  cmake-single-platform.yml
bitreader/: CMakeLists.txt
bitreader/include/bitreader/: bitreader-utils.hpp  bitreader.hpp  bitwriter.hpp
bitreader/include/bitreader/codings/: exp-golomb-k0.hpp  string-nullterm.hpp
bitreader/include/bitreader/common/: direct_file_reader.hpp  file_reader.hpp  numeric.hpp  shared_buffer.hpp
bitreader/include/bitreader/data_source/: byte_source.hpp  file_byte_source.hpp  memory_byte_source.hpp
bitreader/src/: bitreader.cpp
bitreader/src/common/: direct_file_reader.cpp  shared_buffer.cpp
bitreader/src/data_source/: file_byte_source.cpp  memory_byte_source.cpp
bitreader/test/: CMakeLists.txt  bitreader_gtest.cpp  bitwriter_gtest.cpp  file_byte_source_gtest.cpp  gtest_common.hpp  gtest_common_gtest.cpp  memory_byte_source_gtest.cpp  shared_buffer_gtest.cpp
